--- a/src/components/IndustryGraph/index.css
+++ b/src/components/IndustryGraph/index.css
@@ -4,3 +4,11 @@
 .industry-graph-detail {
   padding-top: 30px;
 }
+.ig-content {
+  text-align: center;
+}
+
+.ig-content-text {
+  font-size: 20px;
+  color: #7f7f7f;
+}
