:lipstick: Update styling on graph page

--- a/src/components/HumanGraph/index.css
+++ b/src/components/HumanGraph/index.css
@@ -15,6 +15,7 @@
   color: #2079ad;
   font-size: 25px;
   text-align: center;
+  margin: 20px auto;
 }
 .graph-human-icon {
   display: inline-block;
