--- a/src/components/PageLayout/index.css
+++ b/src/components/PageLayout/index.css
@@ -8,7 +8,7 @@ body {
 }
 
 .font-th {
-  font-family: 'Prompt', sans-serif;
+  font-family: "Prompt", sans-serif;
   font-weight: 300;
 }
 
@@ -23,15 +23,15 @@ body {
 
 @font-face {
   font-family: defaultFont;
-  src: url('/src/static//fonts/iris2.woff');
+  src: url("../../static/fonts/iris2.woff");
 }
 
 @font-face {
   font-family: irisFont;
-  src: url('/src/static//fonts/iris1.woff');
+  src: url("../../static/fonts/iris.woff");
 }
 
 @font-face {
   font-family: boldFont;
-  src: url('/src/static//fonts/iris3.woff');
+  src: url("../../static/fonts/iris3.woff");
 }
