--- a/src/components/PageLayout/index.css
+++ b/src/components/PageLayout/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Prompt");
+
 body {
   font-family: defaultFont;
   margin: 0;
@@ -9,7 +11,6 @@ body {
 
 .font-th {
   font-family: "Prompt", sans-serif;
-  font-weight: 300;
 }
 
 .font-en {
