--- a/src/components/PageLayout/index.css
+++ b/src/components/PageLayout/index.css
@@ -11,11 +11,11 @@ body {
 
 .font-th {
   font-family: "Prompt", sans-serif;
+  font-weight: 300;
 }
 
 .font-en {
   font-family: defaultFont;
-  /* font-family: helvetica, helvetica, helvetica, sans-serif; */
 }
 
 .font-de {
