--- a/src/components/partner/PartnerDetails/index.css
+++ b/src/components/partner/PartnerDetails/index.css
@@ -22,6 +22,7 @@
 }
 .partner-details-header {
   font-weight: bold;
+  font-size: 1.25rem;
 }
 .partner-details-header-wrapper {
   padding-bottom: 10px;
