--- a/src/components/HumanGraph/index.css
+++ b/src/components/HumanGraph/index.css
@@ -3,9 +3,9 @@
   margin-top: 40px;
 }
 .graph-human-graph {
-  margin-left: auto;
+  margin: 30px auto 40px auto;
+  padding: 0 60px;
   text-align: center;
-  padding: 0px 100px 40px;
   border-radius: 5px;
 }
 .graph-header {
@@ -15,7 +15,7 @@
   color: #2079ad;
   font-size: 25px;
   text-align: center;
-  margin: 20px auto;
+  margin: 20px auto 60px auto;
 }
 .graph-human-icon {
   display: inline-block;
@@ -37,9 +37,6 @@
 }
 .graph-human-icon:hover .tooltiptext {
   visibility: visible;
-}
-.graph-human-graph {
-  margin-top: 30px;
 }
 .graph-human-graph-left {
   display: flex;
@@ -76,7 +73,7 @@
   width: 100%;
   text-align: center;
   font-size: 16px;
-  color: #7a5699c4;
+  color: #7a5699;
   padding: 2px 0;
 }
 
