--- a/src/pages/partners/index.css
+++ b/src/pages/partners/index.css
@@ -9,18 +9,20 @@
 }
 
 .partners-header {
+  margin-top: 20px;
   text-align: center;
 }
 
 .partners-title {
-  font-size: 50px;
+  font-size: 25px;
   font-weight: bold;
+  color: #755682;
   text-align: center;
   animation: appear-top 1s ease;
 }
 
 .partners-content {
-  font-size: 16px;
+  font-size: 18px;
   text-align: center;
   margin-top: 20px;
   animation: appear-bottom 1s ease;
