--- a/src/components/HumanGraph/index.css
+++ b/src/components/HumanGraph/index.css
@@ -15,7 +15,7 @@
   color: #2079ad;
   font-size: 25px;
   text-align: center;
-  margin: 20px auto 60px auto;
+  margin: 10px auto;
 }
 .graph-human-icon {
   display: inline-block;
