--- a/src/components/PageLayout/index.css
+++ b/src/components/PageLayout/index.css
@@ -6,7 +6,7 @@ body {
   padding: 0;
   position: relative;
   height: 100%;
-  color: #7a7a7a;
+  color: #7a7a7a !important;
   /* min-width: 1366px; */
 }
 
