--- a/src/components/TotalResearchCompanyGraph/index.css
+++ b/src/components/TotalResearchCompanyGraph/index.css
@@ -1,30 +1,41 @@
 .tr-graph-desc {
   padding-top: 10px;
   text-align: center;
-  color: #7f7f7f;
 }
-
 .tr-graph-page {
-  margin-top: 20px;
+  margin-top: 60px;
   padding-bottom: 30px;
   border-radius: 20px;
 }
-
-.awdas {
-  color: rgb(122, 86, 153);
+.tr-graph-title {
+  color: #2079ad;
   font-size: 25px;
-  font-weight: bold;
-  text-align: right !important;
+  text-align: center;
+  margin: 10px auto;
 }
-.adaaaa {
+.tr-graph-subtitle {
+  font-size: 18px;
+  text-align: center;
+}
+.tr-graph-detail-text {
+  margin-top: 30px;
+  font-size: 18px;
+  text-align: left;
+}
+.tr-graph-detail-list {
+  margin-left: 20px;
+  font-size: 18px;
+}
+.tr-graph-detail-list > li {
   margin-top: 20px;
+}
+.tr-graph-detail-text-last {
+  margin-top: 50px;
   font-size: 16px;
   text-align: center;
-  color: #7f7f7f;
 }
-
 .tr-graph-detail-wrapper {
-  margin-top: 70px;
+  margin-top: 50px;
 }
 .tr-bottom-text {
   margin-top: 30px;
