--- a/src/components/TotalResearchCompanyGraph2/index.css
+++ b/src/components/TotalResearchCompanyGraph2/index.css
@@ -37,6 +37,10 @@
 .tr-graph-detail-wrapper {
   margin-top: 50px;
 }
+.tr-bottom-text {
+  margin-top: 30px;
+  text-align: center;
+}
 
 @keyframes animation-bg {
   0% {
