--- a/src/components/TotalResearchCompanyGraph2/index.css
+++ b/src/components/TotalResearchCompanyGraph2/index.css
@@ -1,44 +1,38 @@
-.tr-graph-desc {
-  padding-top: 10px;
-  text-align: center;
-}
-.tr-graph-page {
+.tr2-graph-page {
   margin-top: 60px;
   padding-bottom: 30px;
   border-radius: 20px;
 }
-.tr-graph-title {
+.tr2-graph-detail-wrapper {
+  margin-top: 50px;
+}
+.tr2-graph-desc {
+  padding-top: 10px;
+  text-align: center;
+}
+.tr2-graph-title {
   color: #2079ad;
   font-size: 25px;
   text-align: center;
   margin: 10px auto;
 }
-.tr-graph-subtitle {
+
+.tr2-graph-subtitle {
   font-size: 18px;
   text-align: center;
 }
-.tr-graph-detail-text {
-  margin-top: 30px;
+.tr2-graph-detail {
+  padding-top: 30px;
+}
+.tr2-graph-detail-text {
+  text-indent: 20px;
   font-size: 18px;
   text-align: left;
+  line-height: 1.7;
 }
-.tr-graph-detail-list {
-  margin-left: 20px;
-  font-size: 18px;
-}
-.tr-graph-detail-list > li {
-  margin-top: 20px;
-}
-.tr-graph-detail-text-last {
-  margin-top: 50px;
+.tr2-graph-detail-text-last {
+  margin-top: 80px;
   font-size: 16px;
-  text-align: center;
-}
-.tr-graph-detail-wrapper {
-  margin-top: 50px;
-}
-.tr-bottom-text {
-  margin-top: 30px;
   text-align: center;
 }
 
