--- a/src/components/HumanGraph/index.css
+++ b/src/components/HumanGraph/index.css
@@ -3,8 +3,8 @@
   margin-top: 40px;
 }
 .graph-human-graph {
-  margin: 30px auto 40px auto;
-  padding: 0 60px;
+  max-width: 750px;
+  margin: 50px auto 40px auto;
   text-align: center;
   border-radius: 5px;
 }
