--- a/src/components/IndustryGraph/index.css
+++ b/src/components/IndustryGraph/index.css
@@ -1,5 +1,5 @@
 .industry-graph-page {
-  margin: 40px 0;
+  margin: 50px;
 }
 .industry-graph-detail {
   padding-top: 30px;
@@ -8,7 +8,6 @@
   text-align: center;
   padding-top: 40px;
 }
-
 .ig-content-text {
   font-size: 20px;
   color: #7f7f7f;
