--- a/src/pages/graph/index.css
+++ b/src/pages/graph/index.css
@@ -1,7 +1,6 @@
 .graph-page {
   margin: 0 auto;
-  padding: 30px 0;
-  min-height: 900px;
+  padding: 30px 30px;
 }
 .graph-content {
   color: #7f7f7f;
