--- a/src/components/IndustryGraph/index.css
+++ b/src/components/IndustryGraph/index.css
@@ -1,14 +1,23 @@
 .industry-graph-page {
   margin: 50px;
 }
+.industry-graph-subtitle {
+  font-size: 20px;
+  text-align: center;
+  margin-top: -10px;
+  margin-bottom: 20px;
+}
 .industry-graph-detail {
   padding-top: 30px;
 }
 .ig-content {
   text-align: center;
-  padding-top: 40px;
 }
 .ig-content-text {
-  font-size: 20px;
-  color: #7f7f7f;
+  font-size: 18px;
+}
+.ig-content-text-last {
+  margin-top: 40px;
+  font-size: 16px;
+  text-align: center;
 }
