--- a/src/components/Organization/index.css
+++ b/src/components/Organization/index.css
@@ -17,7 +17,7 @@
 .org-content-desc-text-title {
   color: #7a7a7a;
   font-size: 19px;
-  font-weight: bold;
+  font-weight: 500;
   text-align: left;
   margin-top: -10px;
   margin-bottom: 20px;
