--- a/src/components/HumanGraph/index.css
+++ b/src/components/HumanGraph/index.css
@@ -23,16 +23,18 @@
 }
 .graph-human-icon .tooltiptext {
   visibility: hidden;
-  width: 120px;
+  width: 135px;
   background-color: black;
   color: #fff;
   text-align: center;
   border-radius: 6px;
-  padding: 5px 0;
+  padding: 5px 10px;
 
   position: absolute;
-  z-index: 1;
-  top: -30px;
+  z-index: 100;
+  top: -60px;
+
+  font-size: 14px;
 }
 .graph-human-icon:hover .tooltiptext {
   visibility: visible;
@@ -43,6 +45,7 @@
   margin-top: 10px;
   margin-bottom: 10px;
   text-align: left;
+  font-weight: 400;
 }
 .graph-human-graph-right {
   display: flex;
@@ -50,11 +53,13 @@
   margin-top: 10px;
   margin-bottom: 10px;
   text-align: right;
+  font-weight: 400;
 }
 .graph-human-graph-title {
-  font-size: 20px;
   color: #7a5699;
   margin-bottom: 30px;
+  font-size: 20px;
+  font-weight: 400;
 }
 .graph-human-total {
   padding: 12px 30px;
