--- a/src/components/PageLayout/index.css
+++ b/src/components/PageLayout/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Prompt:300,400,500,700");
+@import url("https://fonts.googleapis.com/css?family=Prompt:300,400,500,600,700");
 
 @font-face {
   font-family: defaultFont;
@@ -7,6 +7,7 @@
 
 body {
   font-family: "Prompt", sans-serif !important;
+  font-weight: 300 !important;
   margin: 0;
   padding: 0;
   position: relative;
