--- a/src/pages/partners/index.css
+++ b/src/pages/partners/index.css
@@ -15,7 +15,7 @@
 
 .partners-title {
   font-size: 25px;
-  font-weight: bold;
+  font-weight: 400;
   color: #755682;
   text-align: center;
   animation: appear-top 1s ease;
