--- a/src/components/PageLayout/index.css
+++ b/src/components/PageLayout/index.css
@@ -12,7 +12,7 @@ body {
   padding: 0;
   position: relative;
   height: 100%;
-  color: #7a7a7a !important;
+  color: #747474 !important;
 }
 
 .font-th {
