:lipstick: Edit margin of page component from navbar

--- a/src/components/HeaderGraph/index.css
+++ b/src/components/HeaderGraph/index.css
@@ -1,7 +1,6 @@
 .header-graph-container {
-  margin-top: 70px;
+  /* nothing */
 }
-
 .bg-header-graph {
   height: 600px;
   background-image: linear-gradient(
