:lipstick: update nav-item style

--- a/src/components/Layout/NavBar/index.css
+++ b/src/components/Layout/NavBar/index.css
@@ -31,6 +31,11 @@
   font-size: 16px;
   font-weight: 500;
 }
+.nav-text:hover {
+  color: #7a5699;
+  font-size: 16px;
+  font-weight: 500;
+}
 .nav-text-active {
   color: #7a5699;
   font-size: 16px;
