--- a/src/pages/partners/index.css
+++ b/src/pages/partners/index.css
@@ -26,3 +26,8 @@
   margin-top: 30px;
   animation: appear-bottom 1s ease;
 }
+
+.partner-table-row {
+  border: 2px solid #f3edf2;
+  border-radius: 8px;
+}
