--- a/src/pages/partners/index.css
+++ b/src/pages/partners/index.css
@@ -31,3 +31,15 @@
   border: 2px solid #f3edf2;
   border-radius: 8px;
 }
+
+.animated-fade {
+  animation: 1s fafaf ease-in-out;
+}
+@keyframes fafaf {
+  0% {
+    opacity: 0.1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
