--- a/src/components/PartnersTable/index.css
+++ b/src/components/PartnersTable/index.css
@@ -41,3 +41,15 @@
   cursor: pointer;
   padding: 14px;
 }
+.partner-table-list {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  font-size: 16px;
+  list-style-type: none;
+  border: 1px solid #e2e2e2;
+  border-radius: 10px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
