--- a/src/components/PartnersTable/index.css
+++ b/src/components/PartnersTable/index.css
@@ -48,9 +48,13 @@
   overflow-y: scroll;
   border-radius: 0 0 10px 10px;
 }
-.dropdown-item {
+.__dropdown-item {
   cursor: pointer;
-  padding: 14px;
+  padding: 10px;
+  font-size: 14px;
+}
+.__dropdown-item:hover {
+  background-color: #f5f4f4;
 }
 .partner-table-list {
   display: flex;
