--- a/src/components/PartnersTable/index.css
+++ b/src/components/PartnersTable/index.css
@@ -15,7 +15,7 @@
   cursor: pointer;
   transition: all 0.5s ease;
 }
-.partner-table-item.sales .active {
+.partner-table-item.sales .active-dropdown {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 0;
 }
@@ -48,7 +48,8 @@
 .dropdown-list {
   z-index: 3;
   position: absolute;
-  border: 1px solid rgb(231, 223, 223);
+  border: 1px solid #e2e2e2;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
   border-top: 0 solid #000;
   background-color: #fff;
   max-height: 230px;
@@ -63,6 +64,7 @@
 .__dropdown-item:hover {
   background-color: #f5f4f4;
 }
+
 .partner-table-list {
   display: flex;
   position: relative;
