--- a/src/components/partner/index.css
+++ b/src/components/partner/index.css
@@ -3,80 +3,20 @@ a {
   padding: 0;
 }
 .partner-page {
-  color: #464c57;
-}
-.dot {
-  width: 2px;
-  height: 2px;
-  border-radius: 50%;
-  background-color: #595858;
-  display: inline-block;
-}
-._3l0uo > p {
-  display: inline-block;
-  color: #595858;
-  font-size: 14px;
-}
-._3l0uo-name:hover {
-  color: #ad73af;
-  cursor: pointer;
-  transition: color 0.4s ease-in-out;
-}
-.partner-title {
-  text-align: center;
-  padding: 15px 0;
-}
-.partner-title > h3 {
-  font-weight: bold;
-}
-.partner-page {
   margin: 0 auto;
   max-width: 920px;
   padding: 20px 0;
-}
-
-.partner-nav-list {
-  display: flex;
-  margin-top: 15px;
-}
-
-.partner-nav-item-wrap {
-  margin-right: 25px;
-  padding: 5px;
-  transition: color 0.5s ease-in-out;
-}
-
-.partner-nav-item {
-  font-size: 14px;
-  color: #2f2e2e;
-  font-weight: 0;
-  cursor: pointer;
-}
-
-.partner-body {
-  margin-top: 35px;
-  padding: 50px;
-  border: 1px solid #ccc;
+  color: #464c57;
 }
 .partner-content-header {
   font-size: 1.25rem;
   margin: 10px 0 20px;
 }
-.partner-content-title {
-  font-weight: bold;
-}
 .partner-content {
   padding: 10px 30px;
-  border: 1px solid #eaeaeb;
-  border-radius: 5px;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-}
-
-.partner-page-card {
-  min-height: 400px;
-  /* border: 1px solid #e2d6e2; */
-  border-radius: 5px;
-  margin: 40px 0;
+  border: 1px solid #eee;
+  border-radius: 4px;
+  /* box-shadow: 0 0 3px rgba(0, 0, 0, 0.2); */
 }
 .partner-content p {
   padding-top: 8px;
@@ -100,28 +40,9 @@ a {
 .partner-page-left {
   padding: 75px 20px;
 }
-.partner-page-right {
-  padding: 19px;
-}
-.partner-tab {
-  display: flex;
-  justify-content: flex-end;
-}
 
-.partner-contact-item {
-  display: flex;
-  margin-top: 10px;
-}
-
-.partner-page-left-wrapper {
-  text-align: center;
-  margin: 30px 0 0 0;
-}
 .partner-section-header-wrapper {
   padding-bottom: 10px;
   border-bottom: 2px solid #eaeaeb;
   font-weight: bold;
-}
-.partner-tag-section {
-  margin-top: 40px;
 }
