--- a/src/components/partner/PartnerContacts/index.css
+++ b/src/components/partner/PartnerContacts/index.css
@@ -5,3 +5,10 @@
 .partner-contact-title {
   font-weight: bold;
 }
+.link-homepage {
+  text-decoration: none;
+  color: #464c57;
+}
+.link-homepage:hover {
+  color: #464c57;
+}
