--- a/src/components/PartnersList/index.css
+++ b/src/components/PartnersList/index.css
@@ -1,15 +1,77 @@
 
-.animated-fade {
-  animation: 0.3s appearance ease-in-out;
+.partners-list {
 }
-.aabbaa {
-  text-decoration: none;
-  color: inherit;
+.partners-list-wrapper {
+  padding: 10px;
+  animation: opacity1 1.4s;
 }
-.aabbaa:hover {
-  text-decoration: none;
-  color: inherit;
+.partners-list-header {
+  padding: 10px 100px 15px 13px;
 }
+.partners-list-title {
+  font-size: 50px;
+  font-weight: bold;
+}
+.partners-list-content {
+  font-size: 15px;
+}
+.partners-main-images {
+  border-radius: 10px;
+  cursor: pointer;
+  width: 100%;
+}
+.partners-images {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+.placeholder-content {
+  position: absolute;
+  transition: opacity 0.6s ease-in-out;
+  padding: 0px 30px;
+  width: 100%;
+  font-size: 20px;
+  color: #fff;
+}
+.placeholder-content-second {
+  position: absolute;
+  opacity: 0;
+  padding: 0px 30px;
+  width: 100%;
+  font-size: 18px;
+  color: #fff;
+}
+.partners-images:hover .placeholder-content {
+  animation: fade-out-down 0.6s ease;
+  opacity: 0;
+}
+.partners-images:hover .placeholder-content-second {
+  transition: opacity 0.6s ease-in-out;
+  opacity: 1;
+}
+
+@keyframes opacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 2;
+  }
+}
+
+@keyframes fade-out-down {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(50px);
+    opacity: 0;
+  }
+}
+
 @keyframes appearance {
   0% {
     opacity: 0.3;
