--- a/src/components/partner/index.css
+++ b/src/components/partner/index.css
@@ -15,7 +15,9 @@ a {
 .partner-content {
   padding: 5px;
   border: 1px solid #eee;
-  border-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 10px;
+  margin: 25px 0;
 }
 .partner-content p {
   padding-top: 8px;
