--- a/src/components/partner/index.css
+++ b/src/components/partner/index.css
@@ -14,6 +14,7 @@ a {
 }
 .partner-content {
   padding: 5px;
+  padding-bottom: 20px;
   border: 1px solid #eee;
   box-shadow: 0px 1px 3px rgba(0,0,0,0.2);
   border-radius: 10px;
