--- a/src/components/Layout/NavBar/index.css
+++ b/src/components/Layout/NavBar/index.css
@@ -41,8 +41,10 @@
 @keyframes slide-down456 {
   0% {
     transform: translateY(-60px);
+    opacity: 0;
   }
   100% {
     transform: translateY(0);
+    opacity: 1;
   }
 }
