--- a/src/components/PartnersList/index.css
+++ b/src/components/PartnersList/index.css
@@ -1,25 +1,29 @@
+.partners-list {}
 
-.partners-list {
-}
 .partners-list-wrapper {
   padding: 10px;
   animation: opacity1 1.4s;
 }
+
 .partners-list-header {
   padding: 10px 100px 15px 13px;
 }
+
 .partners-list-title {
   font-size: 50px;
   font-weight: bold;
 }
+
 .partners-list-content {
   font-size: 15px;
 }
+
 .partners-main-images {
   border-radius: 10px;
   cursor: pointer;
   width: 100%;
 }
+
 .partners-images {
   display: flex;
   position: relative;
@@ -27,6 +31,7 @@
   flex-direction: column;
   text-align: center;
 }
+
 .placeholder-content {
   position: absolute;
   transition: opacity 1s ease-in-out;
@@ -35,6 +40,7 @@
   font-size: 20px;
   color: #fff;
 }
+
 .placeholder-content-second {
   position: absolute;
   opacity: 0;
@@ -43,10 +49,12 @@
   font-size: 18px;
   color: #fff;
 }
+
 .partners-images:hover .placeholder-content {
   animation: fade-out-down 0.6s ease;
   opacity: 0;
 }
+
 .partners-images:hover .placeholder-content-second {
   transition: opacity 0.6s ease-in-out;
   opacity: 1;
@@ -56,6 +64,7 @@
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 2;
   }
@@ -66,6 +75,7 @@
     transform: translateY(0);
     opacity: 1;
   }
+
   to {
     transform: translateY(100px);
     opacity: 0;
@@ -76,6 +86,7 @@
   0% {
     opacity: 0.3;
   }
+
   100% {
     opacity: 1;
   }
@@ -86,6 +97,7 @@
     transform: translateX(-100px);
     opacity: 0;
   }
+
   100% {
     transform: translateX(0);
     opacity: 1;
@@ -97,6 +109,7 @@
     transform: translateX(100px);
     opacity: 0;
   }
+
   100% {
     transform: translateX(0);
     opacity: 1;
@@ -108,6 +121,7 @@
     transform: translateY(-100px);
     opacity: 0;
   }
+
   100% {
     transform: translateY(0);
     opacity: 1;
@@ -119,6 +133,7 @@
     transform: translateY(100px);
     opacity: 0;
   }
+
   100% {
     transform: translateY(0);
     opacity: 1;
