--- a/src/pages/reports/index.css
+++ b/src/pages/reports/index.css
@@ -5,8 +5,7 @@
   min-height: 500px;
 }
 
-.report-header {
-}
+.report-header {}
 
 .report-title {
   font-size: 25px;
@@ -73,8 +72,7 @@
   margin-top: 15px;
 }
 
-.report-item-detail-name {
-}
+.report-item-detail-name {}
 
 .report-item-detail-text {
   margin-top: 5px;
