--- a/src/components/PartnersList/index.css
+++ b/src/components/PartnersList/index.css
@@ -29,7 +29,7 @@
   position: relative;
   justify-content: center;
   flex-direction: column;
-  text-align: center;
+  text-align: left;
 }
 
 .placeholder-content {
@@ -37,8 +37,8 @@
   transition: opacity 1s ease-in-out;
   padding: 0px 30px;
   width: 100%;
-  font-size: 20px;
-  color: #fff;
+  font-size: 18px;
+  color: #222;
 }
 
 .placeholder-content-second {
@@ -47,7 +47,7 @@
   padding: 0px 30px;
   width: 100%;
   font-size: 18px;
-  color: #fff;
+  color: #222;
 }
 
 .partners-images:hover .placeholder-content {
