--- a/src/components/PartnersList/index.css
+++ b/src/components/PartnersList/index.css
@@ -30,24 +30,28 @@
   justify-content: center;
   flex-direction: column;
   text-align: left;
+  box-shadow: 0px 2px 5px rgba(0,0,0,0.2);
+  border-radius: 10px;
 }
 
 .placeholder-content {
   position: absolute;
   transition: opacity 1s ease-in-out;
-  padding: 0px 30px;
+  padding: 0px 45% 0 15px;
   width: 100%;
-  font-size: 18px;
-  color: #222;
+  font-size: 16px;
+  font-weight: 500;
+  color: #7f7f7f;
 }
 
 .placeholder-content-second {
   position: absolute;
   opacity: 0;
-  padding: 0px 30px;
+  padding: 0px 45% 0 15px;
   width: 100%;
-  font-size: 18px;
-  color: #222;
+  font-size: 16px;
+  font-weight: 500;
+  color: #7f7f7f;
 }
 
 .partners-images:hover .placeholder-content {
