--- a/src/components/partner/PartnerDetails/index.css
+++ b/src/components/partner/PartnerDetails/index.css
@@ -18,8 +18,8 @@
 }
 
 .partner-details-header {
-  font-weight: bold;
-  font-size: 1.25rem;
+  font-weight: 500;
+  font-size: 25px;
 }
 
 .partner-details-header-wrapper {
