--- a/src/components/partner/PartnerDetails/index.css
+++ b/src/components/partner/PartnerDetails/index.css
@@ -1,7 +1,7 @@
 .partner-description {
-  margin-top: 10px;
+  margin-top: 20px;
   text-indent: 30px;
-  /* padding: 0 20px; */
+  font-size: 17px;
 }
 
 .partner-details-container {
