--- a/src/components/PartnersTable/index.css
+++ b/src/components/PartnersTable/index.css
@@ -19,8 +19,13 @@
   transition: all 0.5s ease;
 }
 
+.partner-table-item.sales .list-item {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
 .partner-table-item.sales .active-dropdown {
-  border-top-right-radius: 10px;
+  border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
 
@@ -52,11 +57,13 @@
   left: 93%;
   width: 0 !important;
   transition: all 400ms ease-in-out;
+  opacity: 0.5;
 }
 
 .search-box.active {
   left: 0%;
-  width: 90.8% !important;
+  opacity: 1;
+  width: 90% !important;
 }
 
 .search-box-input {
@@ -70,23 +77,32 @@
   box-shadow: none !important;
 }
 
+.search-box-input {
+  border-color: #fff;
+}
+
 .search-box-button {
   z-index: 2;
+  border-top-right-radius: 10px !important;
+  border-bottom-right-radius: 10px !important;
 }
 
 .search-box-button>button {
-  border: 1px solid #906cb3 !important;
-  background-color: #906cb3 !important;
-  border-top-right-radius: 10px !important;
-  border-bottom-right-radius: 10px !important;
-  color: #fff;
+  border: 1px solid #fff;
+  background-color: #fff !important;
+  color: #5e5e5e;
   font-weight: 300;
   padding: 0 20px;
   outline: none !important;
-  box-shadow: none !important;
+  /* box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 3px !important; */
+}
+
+.btn-outline-secondary {
+  border-radius: 0 !important;
 }
 
 .search-box-button>button:hover {
+  border: 1px solid #a87cd4;
   background-color: #a87cd4 !important;
 }
 
@@ -129,6 +145,6 @@
   font-size: 16px;
   list-style-type: none;
   border: 1px solid #e2e2e2;
-  border-radius: 10px;
+  border-radius: 10px 0 0 10px;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 }
