--- a/src/components/PartnersTable/index.css
+++ b/src/components/PartnersTable/index.css
@@ -56,8 +56,8 @@
   position: absolute !important;
   left: 93%;
   width: 0 !important;
-  transition: all 400ms ease-in-out;
-  opacity: 0.5;
+  transition: all 400ms ease-in;
+  opacity: 0.7;
 }
 
 .search-box.active {
