--- a/src/components/Graph8/index.css
+++ b/src/components/Graph8/index.css
@@ -10,7 +10,7 @@
 }
 
 .graph8-graph-detail {
-  padding-top: 30px;
+  padding: 40px;
 }
 
 .graph8-content {
@@ -24,5 +24,16 @@
 .graph8-content-text-last {
   margin-top: 40px;
   font-size: 16px;
+  text-align: center;
+}
+
+.graph8-bar {
+  position: relative;
+  height: 200px;
+  width: 500px;
+}
+
+.graph8-summary {
+  width: 100%;
   text-align: center;
 }
