--- a/src/components/PageLayout/index.css
+++ b/src/components/PageLayout/index.css
@@ -13,6 +13,8 @@ body {
   position: relative;
   height: 100%;
   color: #7f7f7f !important;
+  max-width: 100vw !important;
+  overflow-x: hidden;
 }
 
 .font-th {
