--- a/src/components/Graph10/index.css
+++ b/src/components/Graph10/index.css
@@ -8,3 +8,21 @@
   margin-top: -10px;
   margin-bottom: 20px;
 }
+
+.graph10-1 {
+  position: relative;
+  width: 100%;
+  height: 520px;
+}
+
+.graph10-2 {
+  position: relative;
+  width: 1300px;
+  height: 520px;
+}
+
+.graph10-3 {
+  position: relative;
+  width: 100%;
+  height: 520px;
+}
