--- a/src/components/Graph10/index.css
+++ b/src/components/Graph10/index.css
@@ -17,11 +17,12 @@
 
 .graph10-2 {
   position: relative;
-  width: 1300px;
-  height: 520px;
+  width: 100%;
+  height: 570px;
 }
 
 .graph10-3 {
+  margin-top: 80px;
   position: relative;
   width: 100%;
   height: 520px;
