--- a/src/components/partner/PartnerHistory/index.css
+++ b/src/components/partner/PartnerHistory/index.css
@@ -1,6 +1,9 @@
 .partner-history-item {
   margin-top: 15px;
 }
+.partner-history-item > * {
+  word-wrap: break-word;
+}
 
 .partner-history-title {
   font-weight: 500;
