--- a/src/components/partner/index.css
+++ b/src/components/partner/index.css
@@ -37,6 +37,9 @@ a {
 .partner-content-item {
   margin-top: 15px;
 }
+.partner-content-item > *{
+  word-wrap: break-word;
+}
 
 .partner-content>h5 {
   font-weight: bold;
@@ -55,4 +58,7 @@ a {
 .partner-section-header-wrapper {
   padding-bottom: 10px;
   border-bottom: 2px solid #eaeaeb;
+}
+.partner-content-email {
+  display: block;
 }
