:rotating_light: Remove lint alert

--- a/src/components/TotalResearchCompanyGraph2/index.css
+++ b/src/components/TotalResearchCompanyGraph2/index.css
@@ -25,9 +25,7 @@
   text-align: center;
 }
 
-.tr2-graph-detail {
-  padding-top: 40px;
-}
+.tr2-graph-detail {}
 
 .tr2-graph-detail-text {
   text-indent: 20px;
