--- a/src/components/partner/PartnerDetails/index.css
+++ b/src/components/partner/PartnerDetails/index.css
@@ -1,5 +1,6 @@
 .partner-mainproduct {
   margin-top: 40px;
+  animation: appear-bottom 0.8s ease;
 }
 .partner-mainproduct-title {
   font-size: 16px;
@@ -10,7 +11,9 @@
   text-indent: 30px;
   font-size: 17px;
 }
-.partner-description { }
+.partner-description {
+  animation: appear-bottom 1s ease;
+}
 .partner-description-title {
   font-size: 16px;
   font-weight: 500;
