--- a/src/components/Graph8/index.css
+++ b/src/components/Graph8/index.css
@@ -19,17 +19,18 @@
 
 .graph8-content-text {
   font-size: 18px;
+  text-align: left;
+  text-indent: 20px;
 }
 
 .graph8-content-text-last {
-  margin-top: 40px;
-  font-size: 16px;
+  margin-top: 20px;
+  font-size: 18px;
   text-align: center;
 }
 
 .graph8-bar {
   position: relative;
-  height: 200px;
   width: 500px;
 }
 
