--- a/src/components/Organization/index.css
+++ b/src/components/Organization/index.css
@@ -18,7 +18,7 @@
 .org-content-desc-text-title {
   font-size: 19px;
   font-weight: 400;
-  text-align: left;
+  text-align: center;
   margin-top: -10px;
   margin-bottom: 20px;
 }
