--- a/src/components/TotalResearchCompanyGraph2/index.css
+++ b/src/components/TotalResearchCompanyGraph2/index.css
@@ -25,7 +25,9 @@
   text-align: center;
 }
 
-.tr2-graph-detail {}
+.tr2-graph-detail {
+  padding-top: 30px;
+}
 
 .tr2-graph-detail-text {
   text-indent: 20px;
@@ -35,7 +37,7 @@
 }
 
 .tr2-graph-detail-text-last {
-  margin-top: 80px;
+  margin-top: 30px;
   font-size: 18px;
   text-align: center;
 }
