--- a/src/pages/partners/index.css
+++ b/src/pages/partners/index.css
@@ -28,7 +28,7 @@
 }
 
 .search-box {
-  margin-top: 20px;
+  margin-top: 40px;
   margin-bottom: 30px;
 }
 
@@ -44,7 +44,7 @@
 }
 
 .search-box-button>button {
-  border: 1px solid #906cb3 !important;
+  /* border: 1px solid #906cb3 !important; */
   background-color: #906cb3 !important;
   border-top-right-radius: 10px !important;
   border-bottom-right-radius: 10px !important;
