--- a/src/components/Graph9/index.css
+++ b/src/components/Graph9/index.css
@@ -31,10 +31,25 @@
 
 .graph9-pie {
   position: relative;
-  height: 300px;
-  width: 500px;
+  padding-top: 0px !important;
+  padding-left: -10px !important;
 }
 
 .graph9-content-section {
   margin-top: 0;
+}
+
+.raphael-group-22-creditgroup {
+  display: none;
+}
+
+.raphael-group-126-creditgroup {
+  display: none;
+}
+
+.eactfc-graph {
+  background-color: transparent !important;
+  position: absolute;
+  top: -100px;
+  left: 0;
 }
