--- a/src/components/Graph9/index.css
+++ b/src/components/Graph9/index.css
@@ -31,8 +31,8 @@
 
 .graph9-pie {
   position: relative;
-  padding-top: 0px !important;
-  padding-left: -10px !important;
+  width: 300px;
+  height: 300px;
 }
 
 .graph9-content-section {
