--- a/src/components/Layout/Footer/index.css
+++ b/src/components/Layout/Footer/index.css
@@ -8,3 +8,39 @@
 .footer-underline {
   text-decoration: underline;
 }
+.footer-participator-item {
+  margin-top: 25px;
+  text-align: left;
+}
+.footer-resources-list {
+  margin-top: 25px;
+}
+.footer-resources-list-item {
+  margin-top: 13px;
+  padding-left: 10px;
+}
+
+@media only screen and (max-width: 576px) {
+  .footer h6 {
+    text-align: center;
+  }
+  .footer-top {
+    padding: 30px 0px;
+  }
+  .footer-resources {
+    margin-top: 40px;
+    margin-left: auto;
+  }
+  .footer-participator-item {
+    text-align: center;
+  }
+  .footer-resources-list {
+    margin-top: 0px;
+    display: flex;
+  }
+  .footer-resources-list-item {
+    text-align: center;
+    padding-left: 0;
+    flex-grow: 1;
+  }
+}
