--- a/src/pages/partners/index.css
+++ b/src/pages/partners/index.css
@@ -31,6 +31,7 @@
   margin-top: 40px;
   margin-bottom: 30px;
   animation: appear-right 1s ease;
+  padding: 0 !important;
 }
 
 .search-box-input {
