--- a/src/components/Layout/NavBar/index.css
+++ b/src/components/Layout/NavBar/index.css
@@ -7,6 +7,20 @@
   height: auto;
   margin-left: auto;
 }
+.nav-hamburger-toggle {
+  display: none;
+  animation: appear-toggle-top 0.7s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: #fff;
+  z-index: -1;
+}
+.nav-hamburger-toggle-show {
+  display: flex !important;
+}
 .nav-text {
   color: #7a7a7a;
   font-size: 16px;
@@ -59,7 +73,6 @@
   transform: rotate(39deg) translate(-6px, -8px);
   width: 30px;
 }
-
 @keyframes appear {
   0% {
     opacity: 0;
@@ -87,13 +100,19 @@
     transform: translateY(-60px);
     opacity: 0;
   }
-
   100% {
     transform: translateY(0);
     opacity: 1;
   }
 }
-
+@keyframes appear-toggle-top {
+  from {
+    transform: translateY(-100vh);
+  }
+  to {
+    transform: translateY(0px);
+  }
+}
 @media only screen and (max-width: 576px) {
   .nav-menu {
     display: none;
